[metadata]
name = rubicon-java
url = https://beeware.org/rubicon
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = https://rubicon-java.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/rubicon-java/issues
    Source = https://github.com/beeware/rubicon-java
author = Russell Keith-Magee
author_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Java
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
license = New BSD
license_files =
    LICENSE
description = A bridge between the Java Runtime Environment and Python.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
python_requires = >=3.6
packages = rubicon.java
namespace_packages =
    rubicon

[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=
    *.egg-info/*
    .git/*
    .tox/*
    __pycache__
    build/*
    docs/*
    venv/*
    local/*
max-complexity = 26
max-line-length = 119

# The following issues are ignored because they do not match our code style:
# E133: closing bracket missing indentation
# E226: missing whitespace around arithmetic operator
# W503: line break occurred before a binary operator
# C901: Cyclomatic complexity is too high
ignore = E133,E226,W503,C901

[isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 79
multi_line_output = 5
skip =
    docs/conf.py
    venv
    local
